# cookiecutter-test

./: .pre-commit-config.yaml  .readthedocs.yml  README.md  README.rst  cookiecutter.json  noxfile.py
.github/workflows/: constraints.txt  docs.yml  labeler.yml  pre-commit.yml  reset-instance.yml  tests.yml
docs/: conf.py  guide.rst  index.rst  quickstart.rst  requirements.txt
docs/_static/: custom.css
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  .pylintrc  Dockerfile  README.rst  environment.yml  noxfile.py  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: build_and_test.yml  release.yml  tests.yml
{{cookiecutter.project_name}}/common/: README.md  constants.py
{{cookiecutter.project_name}}/common/conf_files/: Dockerfile  environment.yml
{{cookiecutter.project_name}}/docs/: conf.py  reference.rst  usage.rst
{{cookiecutter.project_name}}/docs/references/: README.md  readme.rst
{{cookiecutter.project_name}}/docs/source/: code_reference.rst  conf.py  index.rst  reference.rst  requirements.txt
{{cookiecutter.project_name}}/notebooks/nb_python/: example_note.py
{{cookiecutter.project_name}}/notebooks/notes/: example_note.ipynb
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __main__.py
{{cookiecutter.project_name}}/tests/: test_main.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/tests/: test_main.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/utils/: README.md
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/utils/tests/: test_a_util.py  test_example.py
